--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -14,6 +14,7 @@
         <p class="mt-3">Готов продолжить переход в Новую жизнь?</p>	
 		<div><a href="/gallery" class="btn btn-primary mt-4">Перейти в фотогалерею</a></div>
 		<div><a href="/goals" class="btn btn-success mt-3">Перейти к целям</a></div>
+		<div><a href="{{ url_for('daily_review.get_daily_review') }}" class="btn btn-warning mt-3">Ежедневный отчет</a></div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
