--- a/app/daily_review/templates/customize_questions.html
+++ b/app/daily_review/templates/customize_questions.html
@@ -8,25 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Подключение Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        .question-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-        .question-text {
-            flex-grow: 1;
-        }
-        .question-number {
-            width: 3rem;
-            text-align: center;
-            font-weight: bold;
-        }
-        .delete-icon {
-            cursor: pointer;
-            color: #dc3545;
-        }
-    </style>
+	<link rel="stylesheet" href="{{ url_for('daily_review.static', filename='styles.css') }}">
 </head>
 <body>
     <div class="container mt-5">
