--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -16,6 +16,7 @@
 		<div><a href="/goals" class="btn btn-success mt-3">Перейти к целям</a></div>
 		<div><a href="{{ url_for('daily_review.get_daily_review') }}" class="btn btn-warning mt-3">Ежедневный отчет</a></div>
 		<div><a href="{{ url_for('habits.list_habits') }}" class="btn btn-primary mt-3">Трекер привычек</a></div>
+		<div><a href="{{ url_for('awareness.add_log') }}" class="btn btn-primary mt-3">Дневник осознанности</a></div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
